# rust-douban-250

./: Cargo.toml  README.md
src/: lib.rs  main.rs  movie.rs
