[package]
name = "rust-douban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = {version = "1", features = ["full"]}
reqwest = { version = "0.11", features = ["json"]}
scraper = "0.13.0"
serde = {version = "1.0.143", features = ["serde_derive"]}
serde_json = "1.0.83"
soup = "0.5.1"